--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
               "name": "Launch localhost",
               "type": "chrome",
               "request": "launch",
-              "url": "http://localhost/index.html",
+              "url": "https://localhost/index.html",
               "webRoot": "${workspaceFolder}/wwwroot"
           },
           {
